--- a/ica_money_changer/views/menus.xml
+++ b/ica_money_changer/views/menus.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
+
+    <record id="standalone_app_view_action" model="ir.actions.act_url">
+        <field name="name">Standalone</field>
+        <field name="url">/ica_money_changer/standalone_app</field>
+    </record>
      <!-- This Menu Item will appear in the Upper bar, That's why It needs NO parent or action -->
     <menuitem id="ica_money_changer_root" name="ICA">
+        <!-- This Menu Item must have a parent and an action -->
+        <menuitem id="Standalone_category" name="Standalone"  action="standalone_app_view_action" sequence="1000"/>
         <!-- This Menu Item Must have a parent -->
         <menuitem id="money_changer_category" name="Money Changer" action="ica_money_changer.ica_money_exchange_action"/>
         <menuitem id="ica_order_category" name="Order" action="ica_money_changer.ica_order_action"/>
